# Django

./: .gitignore
day1/bookmark/: pyproject.toml
day1/bookmark/bookmark/: views.py
day1/bookmark/config/: settings.py  urls.py
day1/gugudan/: pyproject.toml
day1/gugudan/config/: settings.py  urls.py
day1/gugudan/templates/: gugu.html
day1/mysite/: pyproject.toml
day1/mysite/mysite/: settings.py
day1/oz_bookmark/: .python-version  pyproject.toml
project/blog/: pyproject.toml
project/blog/blog/: admin.py  cv_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
project/blog/config/: settings.py  urls.py
project/blog/member/: views.py
project/blog/templates/: base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  pagenation.html  test_get.html
project/blog/templates/registration/: login.html  signup.html
project/mysite/: pyproject.toml
project/pystagram/: pyproject.toml
project/pystagram/config/: settings.py  urls.py
project/pystagram/member/: forms.py  models.py  views.py
project/pystagram/templates/: base.html
project/pystagram/templates/auth/: email_verified_done.html  not_verified.html  signup.html  signup_done.html
project/pystagram/utils/: email.py
task/todolist/: pyproject.toml
task/todolist/config/: settings.py  urls.py
task/todolist/templates/: base.html  todocreate.html  todoinfo.html  todolist.html  todoupdate.html
task/todolist/templates/registration/: login.html
task/todolist/todolist/: admin.py  cb_views.py  cbv_urls.py  form.py  models.py  views.py
(+13 files in other folders)
