[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
dotenv = "^0.9.9"
ipython = "^9.8.0"
django-extensions = "^4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
